1.4/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multitools-deployment-back
  labels:
    app: multitools
spec:
  selector:
    matchLabels:
      app: multitools
  template:
    metadata:
      labels:
        app: multitools
    spec:
      containers:
      - name: multitools
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
