1.4/deployment-multi-container.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: akapitulov-netology4
  labels:
    app: nginx-multitool
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
      - name: multitools
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
