1.4/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitools
spec:
  type: ClusterIP
  selector:
    app: nginx-multitool
  ports:
    - name: nginx
      port: 9001
      targetPort: 80
    - name: multitool
      port: 9002
      targetPort: 8080
