1.4/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-front
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - name: nginx
      port: 9001
      targetPort: 80
      nodePort: 30080
