1.4/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-multitools
spec:
  type: NodePort
  selector:
    app: nginx-multitool
  ports:
    - name: nginx
      port: 9001
      targetPort: 80
      nodePort: 30080
    - name: multitool
      port: 9002
      targetPort: 8080
      nodePort: 31080
