1.4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: input-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service-front
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: multitools-service-back
            port:
              number: 9002
